--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="index.js" defer></script>
+        <title>ETCH-a-SKETCH</title>
     </head>
 
     <body>
-        <div class="container"></div>
+        <div class="container">
+            <div class="menu">
+                <h1>etch-a-sketch</h1>
+            </div>
+            <div class="content"></div>
+        </div>
     </body>
 </html>
