update buttons and ui

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="container">
             <div class="menu">
+                <img src="./images/pngfind.com-pen-png-569447.png">
                 <h1>etch-a-sketch</h1>
             </div>
             <div class="content"></div>
